--- a/app/views/person/index.html.erb
+++ b/app/views/person/index.html.erb
@@ -1,20 +1,17 @@
-
-<h1>Lunchtown </h1>
-<h4> Get to meet different people </h4>
-<div>
-    <h5> How this works</h5>
-    Here, you can sign up whenever you have free time to grab lunch with someone and we will randomly assign you to
-    a new person every time!
+<div class="main">
+<h1>Hacker Club Valentines!</h1>
+<div class="explanation">
+How this works: Put in your gender and what you are looking for, and we will set you up with a total no-commitment Dinner
+    Date on Valentines. We will do our best to blitz out matches by 4pm, so you can figure things out.
+    Put your cell phone into comments if you won't have access to new Blitz.
+    We will not share this with anyone but your date, although like all Hacker Club things, there is no warranty at all that no one hacks this.
 </div>
 <div class="flash"><%= flash[:notice] %></div>
-When do you usually have time next week?
 <%= form_for  @person  do |f|%>
-                <div id="error-messages"><%= f.error_messages %></div>
-<%= f.fields_for :freetimes  do |builder| %>
-<%= render :partial=>"freetime_fields", :locals =>{:f => builder} %>
-<%end %>
-<p><%= link_to_add_fields "Add Timeslot", f, :freetimes %></p>
-<p>
-<%= f.submit "Save" %>
-</p>
+<div class="valentines">
+    I am a <%= f.select(:gender, [["Female looking for a Male","fm"],
+                                  ["Male looking for a Female", "mf"],["Male looking for a Male","mm"], ["Female looking for a Female","ff"]] ) %>   <%= f.submit "Save"%>
+
+</div>
 <% end %>
+</div>
